modified headline and color theme

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 <body>
   <header>
-    <h1>Shiva Teja Beerelli</h1>
-    <p>Full-Stack Developer | Java | Spring Boot | React | AWS</p>
-    <a class="resume-button" href="assets/ShivaTeja_Resume.pdf" download>Download Resume</a>
+    <div class="header-container">
+      <div class="title-section">
+        <h1>Shiva Teja Beerelli</h1>
+        <p>Full Stack Developer | Software Engineer | Software Developer</p>
+      </div>
+      <div class="resume-section">
+        <a class="resume-button" href="assets/ShivaTeja_Resume.pdf" download>Download Resume</a>
+      </div>
+    </div>
   </header>
 
   <nav>
